Update 12th October 2025

--- a/tm-free-software.html
+++ b/tm-free-software.html
@@ -24,6 +24,9 @@ To get information on local Linux User Groups in the UK, see this website - <a h
 
 <p>The <a href="https://github.com/sindresorhus/awesome">Awesome Project</a> is an attempt to classify just about everything. Take a look...</p>
 
+<p>The <a href="https://github.com/trimstray/the-book-of-secret-knowledge">The Book of Secret Knowledge</a> - aimed towards System and Network administrators, DevOps, Pentesters, and Security Researchers.. Take a look...</p>
+
+
 <p>Subjects within this page.
 <ul>
   <li><a href="#Windows-Free-Software">Windows - Free Software</a><ul>
@@ -98,6 +101,15 @@ If your Windows computer is heavily infected with viruses, search on <a href="ht
 The GNU people have created a page about free programs and the commercial programs they aim to replace right <a href="https://directory.fsf.org/wiki/Collection:Windows">here</a>.
 </p>
 
+<a id="Windows-on-Linux"></a>
+<h2>Windows on Linux</h2>
+  <p>There are various ways to run Windows apps on Linux. Not something I have experimented with so caveat emptor.</p>
+  <ul>
+    <li><a href="https://www.winboat.app/">WinBoat</a></li>
+    <li><a href="https://www.winehq.org/">Wine - a compatibility layer for running Windows software on Linux.</a></li>
+    
+  </ul>
+
 <a id="Linux"></a>
 <h2>Linux</h2>
   <p>For information about different Linux or BSD operating systems, see <a href="https://distrowatch.com">DistroWatch</a>.
@@ -152,6 +164,10 @@ The GNU people have created a page about free programs and the commercial progra
   <li>At the time of writing, Adobe Software - Photoshop etc does not run on Linux so don't bother changing if you can only use them. However, for other pieces of Windows software, the <a href="https://alternativeto.net/">alternativeto.net</a> website might find a suitable replacement for you.</li>
   <li>If you can't handle change, don't move from Windows to Linux. Moving takes effort.</li>
   <li>Install LibreOffice on Windows. See if you can use it instead of Microsoft Windows. You'll have to use LibreOffice if you move to Linux.</li>
+  <li>For image editing GIMP can replace Adobe Photoshop.</li>
+  <li>For vector graphics Inkscape can replace Adobe Illustrator.</li>
+  <li>For digital painting and drawing, Krita can replace Corel Painter or Photoshop.</li>
+  <li>For video editing, Shotcut can replace Adobe Premiere Elements.</li>
 </ol>
 
 <a id="Moving-from-Windows-to-Linux"></a>
@@ -205,8 +221,8 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   <li>Startup Disc Creator (aka usb-creator-gtk) - for creating install media (USB memory stick or SD card) for different releases of Linux and other isos etc. </li>
 
   <li>Use <a href="https://wiki.gnome.org/Apps/Brasero">Brasero</a> to record isos onto DVD or CD.</li>
-   <li>Use <a href="https://rufus.ie/en/">Rufus</a> create a bootable USB flash drives (nice GUI etc) in Windows using a single iso file.</li> 
-
+  <li>Use <a href="https://rufus.ie/en/">Rufus</a> create a bootable USB flash drives (nice GUI etc) in Windows using a single iso file.</li> 
+  <li>Apparently there is also another tool, <a href="https://etcher.balena.io/">balenaEtcher</a> which apparently is easier for beginners.</li>
 </ul>
 
 <a id="linux-for-phones-and-other-mobile-devices"></a>
@@ -330,7 +346,7 @@ There is also <a href="http://forum.tinycorelinux.net/index.php">Tiny Core Linux
   <li><a href="https://manpages.ubuntu.com/manpages/focal/man1/html-to-markdown.1.html">Ubuntu - html-to-markdown uses the html2markdown command</a></li>
 </ul>
 
- Created : Years Ago. Last update 11th August 2025
+ Created : Years Ago. Last update 9th October 2025
 <a href="https://github.com/ian-bruntlett/TECH-Manuals/blob/main/tm-free-software.md">(This page online)</a>
 <a href="http://validator.w3.org/nu/#file">Validating a web page.</a>
 
